ENH: Creation of a super-build for itkTextureFeature
Creation of a super-build in order to download and compile properly the itk module itkTextureFeature that will be used in BoneTextureExtension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,29 @@ set(EXTENSION_ICONURL "TODO")
 set(EXTENSION_SCREENSHOTURLS "TODO")
 set(EXTENSION_DEPENDS "NA") # Specified as a space separated string, a list or 'NA' if any
 
+set(EXTENSION_BUILD_SUBDIRECTORY BoneTextureExtension-build)
+set(EXTENSION_STATUS Beta)
+
+set(SUPERBUILD_TOPLEVEL_PROJECT BoneTextureExtension)
+
+find_package(Git REQUIRED)
+find_package(Subversion REQUIRED)
 #-----------------------------------------------------------------------------
 # Extension dependencies
 find_package(Slicer REQUIRED)
 include(${Slicer_USE_FILE})
+mark_as_superbuild(Slicer_DIR)
+mark_as_superbuild(PYTHON_EXECUTABLE)
+mark_as_superbuild(PYTHON_INCLUDE_DIR)
+mark_as_superbuild(PYTHON_LIBRARY)
+
+#-----------------------------------------------------------------------------
+option(${EXTENSION_NAME}_SUPERBUILD "Build ${EXTENSION_NAME} and the projects it depends on." ON)
+mark_as_advanced(${EXTENSION_NAME}_SUPERBUILD)
+if(${EXTENSION_NAME}_SUPERBUILD)
+  include("${CMAKE_CURRENT_SOURCE_DIR}/SuperBuild.cmake")
+  return()
+endif()
 
 #-----------------------------------------------------------------------------
 # Extension modules
