ENH: First version of computeGLCMFeatures CLI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ endif()
 
 #-----------------------------------------------------------------------------
 # Extension modules
+add_subdirectory(ComputeGLCMFeatures)
 add_subdirectory(BoneTexture)
 
 #-----------------------------------------------------------------------------
