STYLE: Renaming of the CLIs computing the colormaps

--- a/ComputeGLCMFeatureMaps/CMakeLists.txt
+++ b/ComputeGLCMFeatureMaps/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------
-set(MODULE_NAME ComputeGLCMFeatures)
+set(MODULE_NAME ComputeGLCMFeatureMaps)
 
 #-----------------------------------------------------------------------------
 
