--- a/ComputeGLRLMFeatureMaps/CMakeLists.txt
+++ b/ComputeGLRLMFeatureMaps/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-----------------------------------------------------------------------------
-set(MODULE_NAME ComputeGLRLMFeatures)
+set(MODULE_NAME ComputeGLRLMFeatureMaps)
 
 #-----------------------------------------------------------------------------
 
