--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_subdirectory(ComputeGLRLMFeatures)
 add_subdirectory(ComputeGLCMFeatureMaps)
 add_subdirectory(ComputeGLRLMFeatureMaps)
 add_subdirectory(BoneTexture)
+add_subdirectory(BoneTextureSerializer)
 
 #-----------------------------------------------------------------------------
 set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${CMAKE_BINARY_DIR};${EXTENSION_NAME};ALL;/")
