--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_subdirectory(ComputeGLCMFeatureMaps)
 add_subdirectory(ComputeGLRLMFeatureMaps)
 add_subdirectory(BoneTexture)
 add_subdirectory(BoneTextureSerializer)
+add_subdirectory(SeparateVectorImage)
 
 #-----------------------------------------------------------------------------
 set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${CMAKE_BINARY_DIR};${EXTENSION_NAME};ALL;/")
