ENH: Adding of 2 new CLI for the computation of Bone Morphometry features and feature maps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,10 @@ endif()
 # Extension modules
 add_subdirectory(ComputeGLCMFeatures)
 add_subdirectory(ComputeGLRLMFeatures)
+add_subdirectory(ComputeBMFeatures)
 add_subdirectory(ComputeGLCMFeatureMaps)
 add_subdirectory(ComputeGLRLMFeatureMaps)
+add_subdirectory(ComputeBMFeatureMaps)
 add_subdirectory(BoneTexture)
 add_subdirectory(BoneTextureSerializer)
 add_subdirectory(SeparateVectorImage)
