--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(EXTENSION_DESCRIPTION "This extensions contain several modules that can be u
 
 set(EXTENSION_ICONURL "https://www.slicer.org/w/images/0/09/Logo-BoneTextureExtension.png")
 set(EXTENSION_SCREENSHOTURLS "https://www.slicer.org/w/images/7/70/BoneTextureExtension-Slicer.png")
-set(EXTENSION_DEPENDS "NA") # Specified as a space separated string, a list or 'NA' if any
+set(EXTENSION_DEPENDS "LabelStatistics") # Specified as a space separated string, a list or 'NA' if any
 
 set(EXTENSION_BUILD_SUBDIRECTORY BoneTextureExtension-build)
 set(EXTENSION_STATUS Beta)
