COMP: Update build-system based on Slicer SuperBuild extension template
See https://github.com/Slicer/Slicer/tree/51511385d2bda844f3c34acc3325455bd8de4d55/Utilities/Templates/Extensions/SuperBuild

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.13.4)
 
 project(BoneTextureExtension)
 
@@ -8,29 +8,24 @@ set(EXTENSION_HOMEPAGE "https://www.slicer.org/wiki/Documentation/Nightly/Extens
 set(EXTENSION_CATEGORY "Quantification")
 set(EXTENSION_CONTRIBUTORS "Jean-Baptiste VIMORT (Kitware Inc.)")
 set(EXTENSION_DESCRIPTION "This extensions contain several modules that can be used to compute feature maps of N-Dimensional images using well-known texture analysis methods. Key Features: 8 coocurrence textural features: energy, entropy, correlation, inertia, cluster Shade... / 10 run length textural features: run length emphasis, grey level non uniformity, run length non uniformity, low grey level long run emphasis... / Input configurable parameters: locality of the texture, offset directions for co-ocurrence and run length computation, the number of bins for the intensity histograms, and the intensity range or the range of run lengths.")
-
-
 set(EXTENSION_ICONURL "https://www.slicer.org/w/images/0/09/Logo-BoneTextureExtension.png")
 set(EXTENSION_SCREENSHOTURLS "https://www.slicer.org/w/images/7/70/BoneTextureExtension-Slicer.png")
-set(EXTENSION_DEPENDS "LabelStatistics") # Specified as a space separated string, a list or 'NA' if any
-
+set(EXTENSION_DEPENDS "LabelStatistics") # Specified as a list or "NA" if no dependencies
 set(EXTENSION_BUILD_SUBDIRECTORY BoneTextureExtension-build)
-set(EXTENSION_STATUS Beta)
 
 set(SUPERBUILD_TOPLEVEL_PROJECT BoneTextureExtension)
 
-find_package(Git REQUIRED)
-find_package(Subversion REQUIRED)
 #-----------------------------------------------------------------------------
 # Extension dependencies
 find_package(Slicer REQUIRED)
 include(${Slicer_USE_FILE})
 mark_as_superbuild(Slicer_DIR)
-mark_as_superbuild(PYTHON_EXECUTABLE)
-mark_as_superbuild(PYTHON_INCLUDE_DIR)
-mark_as_superbuild(PYTHON_LIBRARY)
+
+find_package(Git REQUIRED)
+mark_as_superbuild(GIT_EXECUTABLE)
 
 #-----------------------------------------------------------------------------
+# SuperBuild setup
 option(${EXTENSION_NAME}_SUPERBUILD "Build ${EXTENSION_NAME} and the projects it depends on." ON)
 mark_as_advanced(${EXTENSION_NAME}_SUPERBUILD)
 if(${EXTENSION_NAME}_SUPERBUILD)
@@ -53,6 +48,13 @@ add_subdirectory(SaveVectorImageAsCSV)
 add_subdirectory(CreateLabelMapFromCSV)
 
 #-----------------------------------------------------------------------------
-set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${CMAKE_BINARY_DIR};${EXTENSION_NAME};ALL;/")
+set(EXTENSION_CPACK_INSTALL_CMAKE_PROJECTS)
+set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${ITKBoneMorphometry_DIR};ITKBoneMorphometry;RuntimeLibraries;/")
+set(CPACK_INSTALL_CMAKE_PROJECTS "${CPACK_INSTALL_CMAKE_PROJECTS};${ITKTextureFeature_DIR};ITKTextureFeature;RuntimeLibraries;/")
+set(${EXTENSION_NAME}_CPACK_INSTALL_CMAKE_PROJECTS "${EXTENSION_CPACK_INSTALL_CMAKE_PROJECTS}" CACHE STRING "List of external projects to install" FORCE)
+
+#-----------------------------------------------------------------------------
+list(APPEND CPACK_INSTALL_CMAKE_PROJECTS "${CMAKE_BINARY_DIR};${EXTENSION_NAME};ALL;/")
+list(APPEND CPACK_INSTALL_CMAKE_PROJECTS "${${EXTENSION_NAME}_CPACK_INSTALL_CMAKE_PROJECTS}")
 include(${Slicer_EXTENSION_GENERATE_CONFIG})
 include(${Slicer_EXTENSION_CPACK})
